# cogh

./: LICENSE  cogh.cabal
csrc/: event-private.h  event.c  event.h  image.c  image.h  joystick.c  joystick.h  key.c  key.h  mouse.c  mouse.h  render-private.h  render.c  render.h  shader.c  shader.h  text.c  text.h  window-private.h  window.c  window.h
src/Graphics/: Cogh.hs
src/Graphics/Cogh/: Action.hs  Button.hs  Color.hs  CommonFFI.hs  Element.hs  Event.hs  Image.hs  Joystick.hs  Key.hs  Matrix.hs  Mouse.hs  Render.hs  Target.hs  Text.hs  Vector.hs  Window.hs  WindowState.hs
src/Graphics/Cogh/Action/: Internal.hs  Keyboard.hs  Mouse.hs
src/Graphics/Cogh/Element/: Internal.hs
src/Graphics/Cogh/Event/: Helper.hs  Internal.hs  Keyboard.hs  Mouse.hs  Window.hs
src/Graphics/Cogh/Joystick/: Internal.hs
src/Graphics/Cogh/Key/: Internal.hs
src/Graphics/Cogh/Mouse/: Internal.hs
src/Graphics/Cogh/Window/: CWindow.hs  Internal.hs
